Fix API endpoints in frontend files
- Update loyverse-data.html to use /api/data instead of /api/loyverse-data
- Update index.html to use /api/items and /api/categories instead of /api/loyverse/items and /api/loyverse/categories
- Update api-test.html to only show existing endpoints and use correct paths
- Remove references to non-existent endpoints (modifiers, stores, taxes as separate endpoints)

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <script>
     async function fetchLoyverse(endpoint) {
       try {
-        const res = await fetch(`/api/loyverse/${endpoint}`);
+        const res = await fetch(`/api/${endpoint}`);
         if (!res.ok) {
           throw new Error(`HTTP error! status: ${res.status}`);
         }
